[package]
name = "simple-bitcoin-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.3.1"
bitcoin = "0.30.0"
tokio = { version = "1.28", features = ["full"] }
env_logger = "0.11.3"
log = "0.4"
serde_yaml = "0.9.33"